Fixed disabled state of children button. Fixed z-index of filter block

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -469,6 +469,7 @@ body {
   position: absolute;
   top: 130%;
   right: 15%;
+  z-index: 1;
 }
 
 .top-section__filter-block {
